[package]
name = "html-transformer-axum"
edition = "2024"
resolver = "3"

[dependencies]
axum = { version = "0.8.4" }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.6.6", features = ["compression-full", "cors"] }
transformer = { path = "../transformer"}

[profile.release]
lto = true
codegen-units = 1
strip = true
